Han character format  using [[WP:AWB|AWB]] <偑#1738843>

--- a/en/偑/偑.11105.wikitext
+++ b/en/偑/偑.11105.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2721<sub>0</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人竹弓戈 (OHNI)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=2721<sub>0</sub>|canj=人竹弓戈 (OHNI)}}
+====References====
+{{Han ref|kx=0110.190|dkj=00851|dj=0236.030|hdz=10194.020|uh=5051|ud=20561|bh=D467|bd=54375}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,34 +19,15 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[ふう]] (hū), [[ふ]] (fu)
-|kun readings=
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[ふう]] (hū), [[ふ]] (fu)|kun=}}
 
-* '''Other info''':  
 
-----
 
-== Dictionary Information ==
-
-* KangXi: 0110.190
-* Morohashi: 00851
-* Dae Jaweon: 0236.030
-* Hanyu Da Zidian: 10194.020
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5051
-** Decimal: 20561
-* '''Big5''':
-** Hex: D467
-** Decimal: 54375
 
 [[fr:偑]]
