--- a/en/偒/偒.11106.wikitext
+++ b/en/偒/偒.11106.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人日一竹 (OAMH)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=|canj=人日一竹 (OAMH)}}
+====References====
+{{Han ref|kx=0110.200|dkj=00852|dj=0236.040|hdz=10190.010|uh=5052|ud=20562}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,21 +19,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[とう]] (tō)
-|kun readings=[[まつすぐ]] (matsusugu)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[とう]] (tō)|kun=[[まつすぐ]] (matsusugu)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 탕
 
@@ -48,19 +38,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': tang
 ** '''[[McCune-Reischauer]]''': t'ang
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0110.200
-* Morohashi: 00852
-* Dae Jaweon: 0236.040
-* Hanyu Da Zidian: 10190.010
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5052
-** Decimal: 20562
 
 [[fr:偒]]
