--- a/en/偓/偓.11107.wikitext
+++ b/en/偓/偓.11107.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2721<sub>4</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人尸一土 (OSMG)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=2721<sub>4</sub>|canj=人尸一土 (OSMG)}}
+====References====
+{{Han ref|kx=0110.210|dkj=00853|dj=0236.050|hdz=10198.010|uh=5053|ud=20563|bh=D451|bd=54353}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,21 +19,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': ak1
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[あく]] (aku)
-|kun readings=[[かかはるさま]] (kakaharusama)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[あく]] (aku)|kun=[[かかはるさま]] (kakaharusama)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 악
 
@@ -48,22 +38,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': ak
 ** '''[[McCune-Reischauer]]''': ak
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0110.210
-* Morohashi: 00853
-* Dae Jaweon: 0236.050
-* Hanyu Da Zidian: 10198.010
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5053
-** Decimal: 20563
-* '''Big5''':
-** Hex: D451
-** Decimal: 54353
 
 [[fr:偓]]
