Han character format  using [[WP:AWB|AWB]] <偗#1738877>

--- a/en/偗/偗.11111.wikitext
+++ b/en/偗/偗.11111.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2926<sub>2</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人火竹山 (OFHU)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=2926<sub>2</sub>|canj=人火竹山 (OFHU)}}
+====References====
+{{Han ref|kx=0110.250|dkj=00857|dj=0236.090|hdz=10189.040|uh=5057|ud=20567|bh=D466|bd=54374}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,34 +19,15 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[せい]] (sei), [[しゃう]] (shau)
-|kun readings=[[まつすぐなさま]] (matsusugunasama)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[せい]] (sei), [[しゃう]] (shau)|kun=[[まつすぐなさま]] (matsusugunasama)}}
 
-* '''Other info''':  
 
-----
 
-== Dictionary Information ==
-
-* KangXi: 0110.250
-* Morohashi: 00857
-* Dae Jaweon: 0236.090
-* Hanyu Da Zidian: 10189.040
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5057
-** Decimal: 20567
-* '''Big5''':
-** Hex: D466
-** Decimal: 54374
 
 [[fr:偗]]
