--- a/en/偘/偘.11112.wikitext
+++ b/en/偘/偘.11112.wikitext
@@ -1,20 +1,14 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人口口口 (ORRR)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning''': ancient family name
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=|canj=人口口口 (ORRR)}}
+# ancient family name
+====References====
+{{Han ref|kx=0110.260|dkj=00858|dj=0236.100|hdz=10191.080|uh=5058|ud=20568}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,21 +20,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[かん]] (kan)
-|kun readings=
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[かん]] (kan)|kun=}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 간
 
@@ -48,19 +39,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': gan
 ** '''[[McCune-Reischauer]]''': kan
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0110.260
-* Morohashi: 00858
-* Dae Jaweon: 0236.100
-* Hanyu Da Zidian: 10191.080
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5058
-** Decimal: 20568
 
 [[fr:偘]]
