--- a/en/停/停.11116.wikitext
+++ b/en/停/停.11116.wikitext
@@ -1,25 +1,17 @@
-* '''Alternate form''': [[仃]]
+{{see|仃}}
 
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2022<sub>1</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人卜口弓 (OYRN)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-*#stop, suspend, delay
-*# suitable
-
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=2022<sub>1</sub>|canj=人卜口弓 (OYRN)}}
+# stop, suspend, delay
+# suitable
+====References====
+{{Han ref|kx=0110.320|dkj=00864|dj=0236.160|hdz=10194.070|uh=505C|ud=20572|bh=B0B1|bd=45233}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -31,21 +23,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': ting4
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[てい]] (tei), [[ちょう]] (chō), [[じょう]] (jō)
-|kun readings=[[とどまる]] (todomaru)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[てい]] (tei), [[ちょう]] (chō), [[じょう]] (jō)|kun=[[とどまる]] (todomaru)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 정
 
@@ -53,26 +42,11 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': jeong
 ** '''[[McCune-Reischauer]]''': chŏng
 
-----
 
-== Dictionary Information ==
 
-* KangXi: 0110.320
-* Morohashi: 00864
-* Dae Jaweon: 0236.160
-* Hanyu Da Zidian: 10194.070
 
-== Technical Information ==
 
-* '''Unicode''':
-** Hex: 505C
-** Decimal: 20572
-* '''Big5''':
-** Hex: B0B1
-** Decimal: 45233
 
-[[Category:Chinese hanzi]]
-[[Category:Japanese kanji]]
 [[Category:Korean hanja]]
 
 [[fr:停]]
