Han character format  using [[WP:AWB|AWB]] <偞#1738893>

--- a/en/偞/偞.11118.wikitext
+++ b/en/偞/偞.11118.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2429<sub>4</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人心廿木 (OPTD)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=2429<sub>4</sub>|canj=人心廿木 (OPTD)}}
+====References====
+{{Han ref|kx=0111.030|dkj=00867|dj=0237.030|hdz=10186.170|uh=505E|ud=20574|bh=D44F|bd=54351}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,21 +19,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': yip6
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[よう]] (yō), [[きょう]] (kyō), [[ちょう]] (chō)
-|kun readings=[[かるい]] (karui), [[みめよいさま]] (mimeyoisama), [[いやしい]] (iyashii), [[おす]] (osu), [[おさへつける]] (osahetsukeru), [[うつくしい]] (utsukushii)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[よう]] (yō), [[きょう]] (kyō), [[ちょう]] (chō)|kun=[[かるい]] (karui), [[みめよいさま]] (mimeyoisama), [[いやしい]] (iyashii), [[おす]] (osu), [[おさへつける]] (osahetsukeru), [[うつくしい]] (utsukushii)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 엽
 
@@ -48,22 +38,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': yeop
 ** '''[[McCune-Reischauer]]''': yŏp
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0111.030
-* Morohashi: 00867
-* Dae Jaweon: 0237.030
-* Hanyu Da Zidian: 10186.170
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 505E
-** Decimal: 20574
-* '''Big5''':
-** Hex: D44F
-** Decimal: 54351
 
 [[fr:偞]]
