--- a/en/偟/偟.11119.wikitext
+++ b/en/偟/偟.11119.wikitext
@@ -1,23 +1,15 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2621<sub>4</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人竹日土 (OHAG)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-*#agitated
-*# alarmed
-
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=2621<sub>4</sub>|canj=人竹日土 (OHAG)}}
+# agitated
+# alarmed
+====References====
+{{Han ref|kx=0111.040|dkj=00868|dj=0237.040|hdz=10192.070|uh=505F|ud=20575|bh=D45D|bd=54365}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -29,21 +21,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': wong4
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[こう]] (kō), [[おう]] (ō)
-|kun readings=[[たたずむ]] (tatazumu), [[さまよふ]] (samayofu), [[たちもとほる]] (tachimotohoru), [[いとま]] (itoma)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[こう]] (kō), [[おう]] (ō)|kun=[[たたずむ]] (tatazumu), [[さまよふ]] (samayofu), [[たちもとほる]] (tachimotohoru), [[いとま]] (itoma)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 황
 
@@ -51,22 +40,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': hwang
 ** '''[[McCune-Reischauer]]''': hwang
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0111.040
-* Morohashi: 00868
-* Dae Jaweon: 0237.040
-* Hanyu Da Zidian: 10192.070
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 505F
-** Decimal: 20575
-* '''Big5''':
-** Hex: D45D
-** Decimal: 54365
 
 [[fr:偟]]
