--- a/en/偡/偡.11121.wikitext
+++ b/en/偡/偡.11121.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2421<sub>1</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人廿一女 (OTMV)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=2421<sub>1</sub>|canj=人廿一女 (OTMV)}}
+====References====
+{{Han ref|kx=0111.060|dkj=00870|hdz=10186.140|uh=5061|ud=20577|bh=D44E|bd=54350}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,33 +19,15 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[たん]] (tan), [[だ]] (da)
-|kun readings=[[そろってすすむ]] (sorottesusumu), [[ととのったさま]] (totonottasama)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[たん]] (tan), [[だ]] (da)|kun=[[そろってすすむ]] (sorottesusumu), [[ととのったさま]] (totonottasama)}}
 
-* '''Other info''':  
 
-----
 
-== Dictionary Information ==
-
-* KangXi: 0111.060
-* Morohashi: 00870
-* Hanyu Da Zidian: 10186.140
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5061
-** Decimal: 20577
-* '''Big5''':
-** Hex: D44E
-** Decimal: 54350
 
 [[fr:偡]]
