Han character format  using [[WP:AWB|AWB]] <偢#1738900>

--- a/en/偢/偢.11122.wikitext
+++ b/en/偢/偢.11122.wikitext
@@ -1,20 +1,14 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2928<sub>0</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人竹木火 (OHDF)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning''': to stare at
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=2928<sub>0</sub>|canj=人竹木火 (OHDF)}}
+# to stare at
+====References====
+{{Han ref|kx=0111.070|dkj=00871|dj=0237.060|hdz=10192.020|uh=5062|ud=20578|bh=D45A|bd=54362}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,21 +20,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': chau1
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[せう]] (seu)
-|kun readings=[[いつくしまない]] (itsukushimanai), [[うれへるさま]] (ureherusama)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[せう]] (seu)|kun=[[いつくしまない]] (itsukushimanai), [[うれへるさま]] (ureherusama)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 초
 
@@ -48,22 +39,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': cho
 ** '''[[McCune-Reischauer]]''': ch'o
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0111.070
-* Morohashi: 00871
-* Dae Jaweon: 0237.060
-* Hanyu Da Zidian: 10192.020
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5062
-** Decimal: 20578
-* '''Big5''':
-** Hex: D45A
-** Decimal: 54362
 
 [[fr:偢]]
