--- a/en/偦/偦.11126.wikitext
+++ b/en/偦/偦.11126.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人弓人月 (ONOB), X人弓人月 (XONOB)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=|canj=人弓人月 (ONOB), X人弓人月 (XONOB)}}
+====References====
+{{Han ref|kx=0111.150|dkj=00879|dj=0237.130|hdz=10198.050|uh=5066|ud=20582}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,31 +19,15 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[しょ]] (sho)
-|kun readings=[[とおる]] (tooru)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[しょ]] (sho)|kun=[[とおる]] (tooru)}}
 
-* '''Other info''':  
 
-----
 
-== Dictionary Information ==
-
-* KangXi: 0111.150
-* Morohashi: 00879
-* Dae Jaweon: 0237.130
-* Hanyu Da Zidian: 10198.050
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5066
-** Decimal: 20582
 
 [[fr:偦]]
