--- a/en/偧/偧.11127.wikitext
+++ b/en/偧/偧.11127.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人大弓弓 (OKNN)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=|canj=人大弓弓 (OKNN)}}
+====References====
+{{Han ref|kx=0111.170|dkj=00881|dj=0237.140|hdz=10188.100|uh=5067|ud=20583}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,31 +19,15 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[た]] (ta)
-|kun readings=[[はる]] (haru)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[た]] (ta)|kun=[[はる]] (haru)}}
 
-* '''Other info''':  
 
-----
 
-== Dictionary Information ==
-
-* KangXi: 0111.170
-* Morohashi: 00881
-* Dae Jaweon: 0237.140
-* Hanyu Da Zidian: 10188.100
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5067
-** Decimal: 20583
 
 [[fr:偧]]
