Han character format  using [[WP:AWB|AWB]] <偩#1738910>

--- a/en/偩/偩.11129.wikitext
+++ b/en/偩/偩.11129.wikitext
@@ -1,20 +1,14 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2728<sub>6</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人弓月金 (ONBC)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning''': follow
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=2728<sub>6</sub>|canj=人弓月金 (ONBC)}}
+# follow
+====References====
+{{Han ref|kx=0111.220|dkj=00886|dj=0237.190|hdz=10193.090|uh=5069|ud=20585|bh=D45E|bd=54366}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,21 +20,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': fu6
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[ふう]] (hū), [[ぶ]] (bu)
-|kun readings=[[よりかたどる]] (yorikatadoru), [[たのむ]] (tanomu)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[ふう]] (hū), [[ぶ]] (bu)|kun=[[よりかたどる]] (yorikatadoru), [[たのむ]] (tanomu)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 부
 
@@ -48,22 +39,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': bu
 ** '''[[McCune-Reischauer]]''': pu
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0111.220
-* Morohashi: 00886
-* Dae Jaweon: 0237.190
-* Hanyu Da Zidian: 10193.090
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5069
-** Decimal: 20585
-* '''Big5''':
-** Hex: D45E
-** Decimal: 54366
 
 [[fr:偩]]
