Han character format  using [[WP:AWB|AWB]] <偯#1741150>

--- a/en/偯/偯.11135.wikitext
+++ b/en/偯/偯.11135.wikitext
@@ -1,20 +1,14 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2023<sub>2</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人卜口女 (OYRV), X人卜口女 (XOYRV)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning''': sob
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=2023<sub>2</sub>|canj=人卜口女 (OYRV), X人卜口女 (XOYRV)}}
+# sob
+====References====
+{{Han ref|kx=0111.280|dkj=00892|hdz=10194.060|uh=506F|ud=20591|bh=B0C0|bd=45248}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,21 +20,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': yi2
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[い]] (i), [[え]] (e)
-|kun readings=[[なげく]] (nageku)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[い]] (i), [[え]] (e)|kun=[[なげく]] (nageku)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 의
 
@@ -48,21 +39,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': ui
 ** '''[[McCune-Reischauer]]''': ŭi
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0111.280
-* Morohashi: 00892
-* Hanyu Da Zidian: 10194.060
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 506F
-** Decimal: 20591
-* '''Big5''':
-** Hex: B0C0
-** Decimal: 45248
 
 [[fr:偯]]
