--- a/en/偳/偳.11139.wikitext
+++ b/en/偳/偳.11139.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2222<sub>7</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人山一月 (OUMB)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=2222<sub>7</sub>|canj=人山一月 (OUMB)}}
+====References====
+{{Han ref|kx=0111.330|dkj=00896|dj=0238.070|hdz=10191.090|uh=5073|ud=20595|bh=D465|bd=54373}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,34 +19,15 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[たん]] (tan)
-|kun readings=[[ちひさい]] (chihisai), [[すこし]] (sukoshi)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[たん]] (tan)|kun=[[ちひさい]] (chihisai), [[すこし]] (sukoshi)}}
 
-* '''Other info''':  
 
-----
 
-== Dictionary Information ==
-
-* KangXi: 0111.330
-* Morohashi: 00896
-* Dae Jaweon: 0238.070
-* Hanyu Da Zidian: 10191.090
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5073
-** Decimal: 20595
-* '''Big5''':
-** Hex: D465
-** Decimal: 54373
 
 [[fr:偳]]
