--- a/en/偷/偷.11143.wikitext
+++ b/en/偷/偷.11143.wikitext
@@ -1,22 +1,16 @@
-* '''Alternate form''': [[偸]]
+{{see|偸}}
 
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2822<sub>1</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人人一弓 (OOMN)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning''': to steal, burglar, thief
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=2822<sub>1</sub>|canj=人人一弓 (OOMN)}}
+# to steal, burglar, thief
+====References====
+{{Han ref|kx=0112.030|dj=0239.020|hdz=10193.020|uh=5077|ud=20599}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -28,19 +22,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': tau1
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[ちゅう]] (chū), [[とう]] (tō)|kun readings=[[ぬすむ]] (nusumu)}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[ちゅう]] (chū), [[とう]] (tō)|kun=[[ぬすむ]] (nusumu)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 투
 
@@ -48,19 +41,6 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': tu
 ** '''[[McCune-Reischauer]]''': t'u
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0112.030
-* Dae Jaweon: 0239.020
-* Hanyu Da Zidian: 10193.020
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5077
-** Decimal: 20599
 * '''Big5''':
 ** Hex: B0BD
 ** Decimal: 45245
