Han character format  using [[WP:AWB|AWB]] <偸#1741165>

--- a/en/偸/偸.11144.wikitext
+++ b/en/偸/偸.11144.wikitext
@@ -1,22 +1,16 @@
-* '''Alternate form''': [[偷]]
+{{see|偷}}
 
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人人一女 (OOMV)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning''': to steal
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=|canj=人人一女 (OOMV)}}
+# to steal
+====References====
+{{Han ref|kx=0112.071|dkj=00901|hdz=10193.021|uh=5078|ud=20600}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -28,21 +22,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[ちゅう]] (chū), [[とう]] (tō)
-|kun readings=[[ぬすむ]] (nusumu)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[ちゅう]] (chū), [[とう]] (tō)|kun=[[ぬすむ]] (nusumu)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 투
 
@@ -50,18 +41,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': tu
 ** '''[[McCune-Reischauer]]''': t'u
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0112.071
-* Morohashi: 00901
-* Hanyu Da Zidian: 10193.021
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5078
-** Decimal: 20600
 
 [[fr:偸]]
