--- a/en/偹/偹.11145.wikitext
+++ b/en/偹/偹.11145.wikitext
@@ -1,22 +1,16 @@
-* '''Alternate form''': [[備]]
+{{see|備}}
 
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人中竹田 (OLHW)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning''': prepare, ready, perfect
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=|canj=人中竹田 (OLHW)}}
+# prepare, ready, perfect
+====References====
+{{Han ref|kx=0112.071|dkj=00922|hdz=10189.060|uh=5079|ud=20601}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -28,21 +22,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[び]] (bi)
-|kun readings=[[そなえる]] (sonaeru), [[そなわる]] (sonawaru), [[そなえ]] (sonae)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[び]] (bi)|kun=[[そなえる]] (sonaeru), [[そなわる]] (sonawaru), [[そなえ]] (sonae)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 비
 
@@ -50,18 +41,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': bi
 ** '''[[McCune-Reischauer]]''': pi
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0112.071
-* Morohashi: 00922
-* Hanyu Da Zidian: 10189.060
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5079
-** Decimal: 20601
 
 [[fr:偹]]
