--- a/en/偺/偺.11146.wikitext
+++ b/en/偺/偺.11146.wikitext
@@ -1,20 +1,14 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2826<sub>4</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人竹人日 (OHOA), 人竹卜日 (OHYA)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning''': us
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=2826<sub>4</sub>|canj=人竹人日 (OHOA), 人竹卜日 (OHYA)}}
+# us
+====References====
+{{Han ref|kx=0112.071|dkj=00923|hdz=10194.040|uh=507A|ud=20602|bh=B0AF|bd=45231}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,33 +20,15 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': ja1
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[さん]] (san)
-|kun readings=
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[さん]] (san)|kun=}}
 
-* '''Other info''':  
 
-----
 
-== Dictionary Information ==
-
-* KangXi: 0112.071
-* Morohashi: 00923
-* Hanyu Da Zidian: 10194.040
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 507A
-** Decimal: 20602
-* '''Big5''':
-** Hex: B0AF
-** Decimal: 45231
 
 [[fr:偺]]
