Han character format  using [[WP:AWB|AWB]] <偻#1741170>

--- a/en/偻/偻.11147.wikitext
+++ b/en/偻/偻.11147.wikitext
@@ -1,25 +1,17 @@
-* '''Alternate form''': [[僂]]
+{{see|僂}}
 
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人火木女 (OFDV)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-*#humpback
-*# surname
-
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=|canj=人火木女 (OFDV)}}
+# humpback
+# surname
+====References====
+{{Han ref|kx=0112.071|dkj=00924|dj=0239.140|hdz=10195.020|uh=507B|ud=20603}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -34,31 +26,15 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[僂]]
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[ろう]] (rō)
-|kun readings=
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[ろう]] (rō)|kun=}}
 
-* '''Other info''':  
 
-----
 
-== Dictionary Information ==
-
-* KangXi: 0112.071
-* Morohashi: 00924
-* Dae Jaweon: 0239.140
-* Hanyu Da Zidian: 10195.020
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 507B
-** Decimal: 20603
 
 [[fr:偻]]
