Han character format  using [[WP:AWB|AWB]] <傀#1741173>

--- a/en/傀/傀.11152.wikitext
+++ b/en/傀/傀.11152.wikitext
@@ -1,23 +1,15 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+10
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 12|12]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2621<sub>3</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人竹山戈 (OHUI)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-*#great, gigantic
-*# puppet
-
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=10|sn=12|four=2621<sub>3</sub>|canj=人竹山戈 (OHUI)}}
+# great, gigantic
+# puppet
+====References====
+{{Han ref|kx=0112.080|dkj=00928|hdz=10192.080|uh=5080|ud=20608|bh=B3C8|bd=46024}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -29,21 +21,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': faai3
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[かい]] (kai)
-|kun readings=[[おおきい]] (ookii)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人10}}
+====Readings====
+{{ja-readings|on=[[かい]] (kai)|kun=[[おおきい]] (ookii)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 괴
 
@@ -51,21 +40,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': goe
 ** '''[[McCune-Reischauer]]''': koe
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0112.080
-* Morohashi: 00928
-* Hanyu Da Zidian: 10192.080
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5080
-** Decimal: 20608
-* '''Big5''':
-** Hex: B3C8
-** Decimal: 46024
 
 [[fr:傀]]
