--- a/en/傁/傁.11153.wikitext
+++ b/en/傁/傁.11153.wikitext
@@ -1,20 +1,14 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+10
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 12|12]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人竹X水 (OHXE)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning''': old man
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=10|sn=12|four=|canj=人竹X水 (OHXE)}}
+# old man
+====References====
+{{Han ref|kx=0112.090|dkj=00929|hdz=10192.060|uh=5081|ud=20609}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,30 +20,15 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[そう]] (sō), [[す]] (su)
-|kun readings=[[おきな]] (okina)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人10}}
+====Readings====
+{{ja-readings|on=[[そう]] (sō), [[す]] (su)|kun=[[おきな]] (okina)}}
 
-* '''Other info''':  
 
-----
 
-== Dictionary Information ==
-
-* KangXi: 0112.090
-* Morohashi: 00929
-* Hanyu Da Zidian: 10192.060
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5081
-** Decimal: 20609
 
 [[fr:傁]]
