Han character format  using [[WP:AWB|AWB]] <傄#1741179>

--- a/en/傄/傄.11156.wikitext
+++ b/en/傄/傄.11156.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+10
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 12|12]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人大金山 (OKCU)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=10|sn=12|four=|canj=人大金山 (OKCU)}}
+====References====
+{{Han ref|kx=0112.140|dkj=00934|dj=0239.310|hdz=10202.060|uh=5084|ud=20612}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,31 +19,15 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[かつ]] (katsu), [[けち]] (kechi)
-|kun readings=[[すこやかなさま]] (sukoyakanasama)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人10}}
+====Readings====
+{{ja-readings|on=[[かつ]] (katsu), [[けち]] (kechi)|kun=[[すこやかなさま]] (sukoyakanasama)}}
 
-* '''Other info''':  
 
-----
 
-== Dictionary Information ==
-
-* KangXi: 0112.140
-* Morohashi: 00934
-* Dae Jaweon: 0239.310
-* Hanyu Da Zidian: 10202.060
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5084
-** Decimal: 20612
 
 [[fr:傄]]
