--- a/en/傆/傆.11158.wikitext
+++ b/en/傆/傆.11158.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+10
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 12|12]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人一竹火 (OMHF)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=10|sn=12|four=|canj=人一竹火 (OMHF)}}
+====References====
+{{Han ref|kx=0112.200|dkj=00940|dj=0240.060|hdz=10202.050|uh=5086|ud=20614}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,31 +19,15 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[げん]] (gen), [[がん]] (gan), [[かん]] (kan)
-|kun readings=[[こざかしい]] (kozakashii)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人10}}
+====Readings====
+{{ja-readings|on=[[げん]] (gen), [[がん]] (gan), [[かん]] (kan)|kun=[[こざかしい]] (kozakashii)}}
 
-* '''Other info''':  
 
-----
 
-== Dictionary Information ==
-
-* KangXi: 0112.200
-* Morohashi: 00940
-* Dae Jaweon: 0240.060
-* Hanyu Da Zidian: 10202.050
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5086
-** Decimal: 20614
 
 [[fr:傆]]
