--- a/en/傇/傇.11159.wikitext
+++ b/en/傇/傇.11159.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+10
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 12|12]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2424<sub>1</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人廿尸十 (OTSJ)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=10|sn=12|four=2424<sub>1</sub>|canj=人廿尸十 (OTSJ)}}
+====References====
+{{Han ref|kx=0112.210|dkj=00941|dj=0240.070|hdz=10200.070|uh=5087|ud=20615|bh=D85F|bd=55391}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,34 +19,15 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[じょう]] (jō), [[にゅ]] (nyu)
-|kun readings=[[おおい]] (ooi)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人10}}
+====Readings====
+{{ja-readings|on=[[じょう]] (jō), [[にゅ]] (nyu)|kun=[[おおい]] (ooi)}}
 
-* '''Other info''':  
 
-----
 
-== Dictionary Information ==
-
-* KangXi: 0112.210
-* Morohashi: 00941
-* Dae Jaweon: 0240.070
-* Hanyu Da Zidian: 10200.070
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5087
-** Decimal: 20615
-* '''Big5''':
-** Hex: D85F
-** Decimal: 55391
 
 [[fr:傇]]
