--- a/en/傋/傋.11163.wikitext
+++ b/en/傋/傋.11163.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+10
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 12|12]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2524<sub>7</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人廿廿月 (OTTB)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=10|sn=12|four=2524<sub>7</sub>|canj=人廿廿月 (OTTB)}}
+====References====
+{{Han ref|kx=0112.260|dkj=00946|dj=0240.100|hdz=10200.010|uh=508B|ud=20619|bh=D855|bd=55381}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,21 +19,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': gau3
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[こう]] (kō), [[く]] (ku)
-|kun readings=[[へつらわぬ]] (hetsurawanu), [[おろか]] (oroka)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人10}}
+====Readings====
+{{ja-readings|on=[[こう]] (kō), [[く]] (ku)|kun=[[へつらわぬ]] (hetsurawanu), [[おろか]] (oroka)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 강
 
@@ -48,22 +38,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': gang
 ** '''[[McCune-Reischauer]]''': kang
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0112.260
-* Morohashi: 00946
-* Dae Jaweon: 0240.100
-* Hanyu Da Zidian: 10200.010
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 508B
-** Decimal: 20619
-* '''Big5''':
-** Hex: D855
-** Decimal: 55381
 
 [[fr:傋]]
