--- a/en/傓/傓.11173.wikitext
+++ b/en/傓/傓.11173.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+10
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 12|12]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人竹尸一 (OHSM), 人戈尸一 (OISM)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=10|sn=12|four=|canj=人竹尸一 (OHSM), 人戈尸一 (OISM)}}
+====References====
+{{Han ref|kx=0113.150|dkj=00961|dj=0241.050|hdz=10206.060|uh=5093|ud=20627}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,21 +19,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[せん]] (sen)
-|kun readings=[[さかん]] (sakan)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人10}}
+====Readings====
+{{ja-readings|on=[[せん]] (sen)|kun=[[さかん]] (sakan)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 선
 
@@ -48,19 +38,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': seon
 ** '''[[McCune-Reischauer]]''': sŏn
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0113.150
-* Morohashi: 00961
-* Dae Jaweon: 0241.050
-* Hanyu Da Zidian: 10206.060
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5093
-** Decimal: 20627
 
 [[fr:傓]]
