--- a/en/傕/傕.11175.wikitext
+++ b/en/傕/傕.11175.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+10
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 12|12]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2421<sub>4</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人人月土 (OOBG)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=10|sn=12|four=2421<sub>4</sub>|canj=人人月土 (OOBG)}}
+====References====
+{{Han ref|kx=0113.170|dkj=00963|dj=0241.070|hdz=10206.090|uh=5095|ud=20629|bh=D852|bd=55378}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,21 +19,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': gok3
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[かく]] (kaku)
-|kun readings=
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人10}}
+====Readings====
+{{ja-readings|on=[[かく]] (kaku)|kun=}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 각
 
@@ -48,22 +38,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': gak
 ** '''[[McCune-Reischauer]]''': kak
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0113.170
-* Morohashi: 00963
-* Dae Jaweon: 0241.070
-* Hanyu Da Zidian: 10206.090
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5095
-** Decimal: 20629
-* '''Big5''':
-** Hex: D852
-** Decimal: 55378
 
 [[fr:傕]]
