Han character format  using [[WP:AWB|AWB]] <傘#1741197>

--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -1,23 +1,18 @@
-* '''Alternate form''': [[伞]]
+{{see|伞}}
 
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+10
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 12|12]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 8040<sub>8</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人人人十 (OOOJ)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning''': [[umbrella]], [[parasol]], [[parachute]]
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=10|sn=12|four=8040<sub>8</sub>|canj=人人人十 (OOOJ)}}
+# [[umbrella]], [[parasol]], [[parachute]]
+====References====
+{{Han ref|kx=0113.200|dkj=00966|dj=0241.100|hdz=10198.130|uh=5098|ud=20632|bh=B3CA|bd=46026}}
 ----
 
-== Chinese [[hanzi]] ==
-[[Category:Chinese hanzi]]
+==Chinese==
+===Hanzi===
+
+
+
 * '''Romanizations'''
 ** [[Mandarin]]
 *** '''[[Pinyin]]''': [[sǎn]] ([[san3]])
@@ -31,12 +26,11 @@
 * '''Style''': [[Traditional Chinese]] 
 ** '''[[Simplified Chinese|Simplified]] equivalent''': [[伞]]
 
-
 ----
-
 ==Japanese==
 [[Category:1000_Japanese_basic_words|かさ]]
-[[Category:Japanese language|かさ]]
+
+
 ===Noun===
 {{janoun|かさ|kasa}}
 # [[umbrella]], [[parasol]]
@@ -61,7 +55,9 @@
 *[[傘立て]]
 
 ===Kanji===
-{{kanji|[[さん]] ([[san]])|[[かさ]] ([[kasa]])}}
+{{ja-kanji|grade=|rs=人10}}
+====Readings====
+{{ja-readings|on=[[さん]] ([[san]])|kun=[[かさ]] ([[kasa]])}}
 ====Compounds====
 *[[傘屋]]
 *[[傘下]]
@@ -75,7 +71,8 @@
 *[[雨傘]]
 ----
 
-== Korean [[hanja]] ==
+==Korean==
+===Hanja===
 [[Category:Korean hanja]]
 * '''Pronunciation''': [[산]]
 
@@ -85,26 +82,10 @@
 
 * '''Compounds''':
 **[[雨傘]] ([[우산]], usan)
-
 ----
 
-== Dictionary information ==
 
-* KangXi: 0113.200
-* Morohashi: 00966
-* Dae Jaweon: 0241.100
-* Hanyu Da Zidian: 10198.130
 
-== Technical information ==
-
-* '''Unicode''':
-** Hex: 5098
-** Decimal: 20632
-* '''Big5''':
-** Hex: B3CA
-** Decimal: 46026
-
-[[Category:Japanese kanji|人10傘]]
 
 [[de:傘]]
 [[fr:傘]]
