--- a/en/備/備.11180.wikitext
+++ b/en/備/備.11180.wikitext
@@ -1,22 +1,16 @@
-* '''Alternate form''': [[备]]
+{{see|备}}
 
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+10
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 12|12]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2422<sub>7</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人廿竹月 (OTHB)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning''': prepare, ready, perfect
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=10|sn=12|four=2422<sub>7</sub>|canj=人廿竹月 (OTHB)}}
+# prepare, ready, perfect
+====References====
+{{Han ref|kx=0113.210|dkj=00967|dj=0241.110|hdz=10200.080|uh=5099|ud=20633|bh=B3C6|bd=46022}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -31,21 +25,18 @@
 * '''Style''': [[Traditional Chinese]] 
 ** '''[[Simplified Chinese|Simplified]] equivalent''': [[备]]
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[び]] (bi)
-|kun readings=[[そなえる]] (sonaeru), [[そなわる]] (sonawaru), [[そなえ]] (sonae)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人10}}
+====Readings====
+{{ja-readings|on=[[び]] (bi)|kun=[[そなえる]] (sonaeru), [[そなわる]] (sonawaru), [[そなえ]] (sonae)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 비
 
@@ -53,23 +44,6 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': bi
 ** '''[[McCune-Reischauer]]''': pi
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0113.210
-* Morohashi: 00967
-* Dae Jaweon: 0241.110
-* Hanyu Da Zidian: 10200.080
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5099
-** Decimal: 20633
-* '''Big5''':
-** Hex: B3C6
-** Decimal: 46022
 
 [[fr:備]]
 [[ko:備]]
