Han character format  using [[WP:AWB|AWB]] <傛#1741204>

--- a/en/傛/傛.11182.wikitext
+++ b/en/傛/傛.11182.wikitext
@@ -1,20 +1,13 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+10
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 12|12]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2326<sub>8</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人十金口 (OJCR)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning'''
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=10|sn=12|four=2326<sub>8</sub>|canj=人十金口 (OJCR)}}
+====References====
+{{Han ref|kx=0113.250|dkj=00970|dj=0241.140|hdz=10206.040|uh=509B|ud=20635|bh=D851|bd=55377}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,21 +19,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': 
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[よう]] (yō), [[ゆ]] (yu)
-|kun readings=[[かがむ]] (kagamu)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人10}}
+====Readings====
+{{ja-readings|on=[[よう]] (yō), [[ゆ]] (yu)|kun=[[かがむ]] (kagamu)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 용
 
@@ -48,22 +38,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': yong
 ** '''[[McCune-Reischauer]]''': yong
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0113.250
-* Morohashi: 00970
-* Dae Jaweon: 0241.140
-* Hanyu Da Zidian: 10206.040
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 509B
-** Decimal: 20635
-* '''Big5''':
-** Hex: D851
-** Decimal: 55377
 
 [[fr:傛]]
