--- a/en/態/態.15710.wikitext
+++ b/en/態/態.15710.wikitext
@@ -1,22 +1,16 @@
-* '''Alternate form''': [[态]]
+{{see|态}}
 
-* '''[[Wiktionary:Chinese radical index| Radical]] Number 61''': [[Wiktionary:Chinese radical index 心|心]]+10 strokes
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 14|14]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2133<sub>1</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 戈心心 (IPP)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning''': manner, bearing, attitude
-
+==Translingual==
+===Han character===
+{{Han char|rn=61|rad=心|as=10|sn=14|four=2133<sub>1</sub>|canj=戈心心 (IPP)}}
+# manner, bearing, attitude
+====References====
+{{Han ref|kx=0398.030|dkj=11052|dj=0737.040|hdz=42335.070|uh=614B|ud=24907|bh=BA41|bd=47681}}
 ----
 
-== Chinese [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,18 +24,15 @@
 
 * '''Style''': [[Traditional Chinese]] 
 ** '''[[Simplified Chinese|Simplified]] equivalent''': [[态]]
-
 ----
-
 == Japanese ==
-=== [[Kanji]] ===
-{{kanji
-|[[たい]] (tai)
-|[[さま]] (sama), [[わざと]] (wazato)|rs=心10|grade=5}}
-
+===Kanji===
+{{ja-kanji|grade=5|rs=心10}}
+====Readings====
+{{ja-readings|on=[[たい]] (tai)|kun=[[さま]] (sama), [[わざと]] (wazato)}}
 ----
-
-== Korean [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''[[Hangeul]]''': 태
 
@@ -51,30 +42,11 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': tae
 ** '''[[McCune-Reischauer]]''': t'ae
 ** '''[[Yale]]''': thya
-
 ----
-
 ==Vietnamese==
 
 *Reading: [[thái]]
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0398.030
-* Morohashi: 11052
-* Dae Jaweon: 0737.040
-* Hanyu Da Zidian: 42335.070
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 614B
-** Decimal: 24907
-* '''Big5''':
-** Hex: BA41
-** Decimal: 47681
 
 [[fr:態]]
 [[hu:態]]
