--- a/en/停/停.11116.wikitext
+++ b/en/停/停.11116.wikitext
@@ -27,12 +27,20 @@
 ----
 ==Japanese==
 ===Kanji===
-{{ja-kanji|grade=|rs=人09}}
+{{ja-kanji|grade=4|rs=人09}}
 ====Readings====
 {{ja-readings|on=[[てい]] (tei), [[ちょう]] (chō), [[じょう]] (jō)|kun=[[とどまる]] (todomaru)}}
-
+====Compounds====
+{{top4}}
+*[[各停]]
+{{mid4}}
+*[[停車]]
+{{mid4}}
+{{mid4}}
+{{bottom}}
 
 ----
+
 ==Korean==
 ===Hanja===
 
