--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -31,15 +31,17 @@
 *French: [[flotter]]
 {{mid}}
 *Italian: [[galleggiare]]
+*Japanese: [[浮かぶ]] (ukabu), [[浮く]] (uku), [[漂う]] (tadayou)
 *Russian: [[плавать]], [[всплыть]] (to reach the surface)
 {{bottom}}
 
 '''be capable of floating'''
 {{top}}
 *Dutch: [[drijven]]
-{{mid}}
 *Finnish: [[kellua]], [[pysyä]] [[pinta|pinnalla]]
+{{mid}}
 *French: [[flotter]]
+*Japanese: [[浮かぶ]] (ukabu), [[浮く]] (uku)
 {{bottom}}
 
 '''drift gently through the air'''
@@ -47,6 +49,7 @@
 *Finnish: [[leijua]]
 *French: [[flotter]]
 {{mid}}
+*Japanese: [[飛ぶ]] (tobu), [[浮遊する]] (fuyūsuru), [[浮く]] (uku)
 *Russian: [[парить]], [[плыть]]
 {{bottom}}
 
@@ -78,6 +81,7 @@
 *Finnish: [[kellua]]
 *French: [[flotter]]
 {{mid}}
+*Japanese: [[超える]] (koeru)
 {{bottom}}
 
 ===Transitive verb===
@@ -97,6 +101,7 @@
 *Dutch: [[te water laten]], [[voorstellen]]
 *Finnish: [[ehdottaa]], [[heittää]]
 {{mid}}
+*Japanese: [[浮かぶ]] (ukabu)
 {{bottom}}
 
 '''extend a short-term loan to'''
@@ -133,6 +138,7 @@
 *Dutch: [[vlot]] ''n''
 *Finnish: [[koho]]
 {{mid}}
+*Japanese: [[浮き]] (uki), [[浮揚物]] (fuyoubutsu)
 *Russian: [[плот]] ''m''
 {{bottom}}
 
