--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -113,10 +113,16 @@
 ====Readings====
 {{ja-readings|on=|kun=[[ち]] (''chi''), [[じ]] (''ji'')}}
 ====Compounds====
+{{top4}}
+*[[意地悪]]
 *[[地球]]
+{{mid4}}
 *[[地底]]
+{{mid4}}
 *[[地理]]
+{{mid4}}
 *[[地盤]]
+{{bottom}}
 
 
 
