--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -48,7 +48,7 @@
 *Kazakh: [[Америка Құрама Штаттары]]
 *Khmer: {{KMchar|[[សហរដ្ឋអាេមរិក]]}} (saharodtthaqa amerika)
 *Kirghiz: [[Америка Кошмо Штаттары]] (Amerika Koşmo Ştattarı)
-*Korean: [[미국]] (Miguk), [[아메리카 합중국]] (Amerika Hapjungguk), ''South Korean:'' [[美國]], ''North Korean:'' [[米國]] (Miguk)
+*Korean: [[미국]]/[[美國]] (Miguk), [[아메리카 합중국]] (Amerika Hapjungguk)
 *Latin: [[Respublicae Unitae Americae]], [[Status Uniti Americae]], [[Civitates Unitae Americae]]
 *Latvian: [[Amerikas Savienotās Valstis]], [[ASV]]
 *Malay: [[Amerika Syarikat]]
