--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -146,7 +146,7 @@
 *French: [[prune]] {{f}}
 *German: [[Pflaume]] {{f}}, [[Zwetschge]] {{f}}
 *Greek: [[δαμάσκηνο]] [ðaˈmasciˌno̞] {{n}}
-*Classical Greek: [[προῦμνον]] {{n}}
+*Ancient Greek: [[προῦμνον]] {{n}}
 *Hindi: [[आलूचा]] (ālūćā), [[आलूबुखारा]] (ālūbukhārā)
 *Hungarian: [[szilva]]
 *Italian: [[prugna]] {{f}}
