/* Translations */ <Czech Republic#1755467>

--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -6,32 +6,42 @@
 
 ====Translations====
 {{top}}
+*Arabic: {{ARchar|[[جمهورية التشيك]]}}
+*Bosnian: [[Češka Republika]] {{f}}
 *Breton: [[Republik Tchek]]
 *Catalan: [[República Txeca]] {{f}}
+*Croatian: [[Češka Republika]] {{f}}
 *Czech: [[Česká republika]] {{f}}
 *Dutch: [[Tsjechische Republiek]]
 *Finnish: [[Tšekin tasavalta]]
 *French: la [[République tchèque]] {{f}}
 *German: [[Tschechische Republik]]
 *Greek: [[Δημοκρατία της Τσεχίας]] {{f}}
+*Hindi: [[चेक रिपब्लिक]] (ćik ripablik)
 *Hungarian: [[Cseh Köztársaság]]
 *Interlingua: [[Republica Chec]]
 *Italian: la [[repubblica Ceca]] {{f}}
 *Japanese: [[チェコ共和国]] (チェコきょうわこく, cheko-kyowakoku)
 *Korean: [[체코 공화국]] (cheko gong-hwaguk)
+*Kurdish: [[Komara Çêkiyayê]]
 {{mid}}
 *Latvian: [[Čehijas Republika]] {{f}}
 *Luxembourgish: [[Tschechesch Republik]]
 *Norwegian: [[Den tsjekkiske republikk]]
+*Persian: {{FAchar|[[جمهوری چک]]}}
 *Polish: [[Republika Czeska]] {{f}}
 *Portuguese: [[República Tcheca]]
 *Romanian: [[Republica Cehă]] {{f}}
 *Russian: [[Чешская Республика]] {{f}}
+*Serbian:
+*:Cyrillic: [[Чешка Република]] {{f}}
+*:Roman: [[Češka Republika]] {{f}}
 *Slovak: [[Česká republika]] {{f}}
-*Slovene: [[Češka republika]]
+*Slovene: [[Češka Republika]] {{f}}
 *Spanish: la [[República Checa]] {{f}}
 *Turkish: [[Çek Cumhuriyeti]]
-*Yiddish: [[Tshekhishe Republik]]
+*Ukrainian: [[Чеська Республіка]]
+*Yiddish: (Tshekhishe Republik)
 {{bottom}}
 
 ====See also====
