--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -147,7 +147,7 @@
 *German: [[Pflaume]] {{f}}, [[Zwetschge]] {{f}}
 *Greek: [[δαμάσκηνο]] [ðaˈmasciˌno̞] {{n}}
 *Ancient Greek: [[προῦμνον]] {{n}}
-*Hebrew: [[שזיף]]
+*Hebrew: [[שזיף]] (shazif) {{m}}
 *Hindi: [[आलूचा]] (ālūćā), [[आलूबुखारा]] (ālūbukhārā)
 *Hungarian: [[szilva]]
 *Italian: [[prugna]] {{f}}
