--- a/en/坂/坂.12997.wikitext
+++ b/en/坂/坂.12997.wikitext
@@ -4,9 +4,11 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=土竹水 (GHE)}}
 # [[slope]], [[hillside]]
+# {{defn|Han}}
+====References====
+{{Han ref|kx=0224.260|dkj=04910|dj=0459.140|hdz=10423.090|uh=5742|ud=22338}}
 
-
-
+----
 ==Japanese==
 ===Kanji===
 {{ja-kanji|grade=|rs=土04}}
@@ -23,9 +25,5 @@
 ===Hanzi===
 {{cmn-hanzi|tra=阪|pin=[[bǎn]] (ban3)|wg=pan<sup>3</sup>}}
 # {{defn|Mandarin}}
-
-
-====References====
-{{Han ref|kx=0224.260|dkj=04910|dj=0459.140|hdz=10423.090|uh=5742|ud=22338}}
 
 [[fr:坂]]
