--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -81,9 +81,8 @@
 # a [[stellar]] object; [[star]]; [[planet]]; satellite; [[comet]]
 
 ===Proper noun===
-[[ほし]] (Hoshi)
-
-#A surname.
+{{ja-pos|k|hira=ほし|rom=Hoshi}}
+# Hoshi (a surname)
 
 ===Compounds===
 *[[星隕]]
