--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -36,7 +36,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 *Frisian: [[moai]], [[kreas]]
 *German: [[schön]]
 *Greek: [[ωραίος]] (oréyos)
-*Hindi: [[ख़ूबसूरत]] (<u>kh</u>ūbsūrat)
+*Hindi: [[ख़ूबसूरत]] (<u>kh</u>ūbsūrat), [[सुन्दर]] (sundar)
 {{mid}}
 *Icelandic: [[fallegur]], [[fagur]]
 *Indonesian: [[indah]], [[cantik]], [[ayu]], [[molek]], [[cakep]]
