--- a/en/型/型.13070.wikitext
+++ b/en/型/型.13070.wikitext
@@ -1,32 +1,74 @@
-==Translingual==
-===Han character===
-{{Han char|rn=32|rad=土|as=06|sn=9|four=1210<sub>4</sub>|canj=一弓土 (MNG)}}
-# [[pattern]], [[model]], [[type]]
-# [[law]]
-# [[mold]]
-====References====
-{{Han ref|kx=0227.280|dkj=05030|dj=0463.180|hdz=10436.110|uh=578B|ud=22411|bh=ABAC|bd=43948}}
+* '''[[Wiktionary:Chinese radical index| Radical]] Number 32''': [[Wiktionary:Chinese radical index 土|土]]+6 strokes
+
+* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 9|9]]
+
+* '''Stroke order''': 
+
+* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 1210<sub>4</sub>
+
+* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 一弓土 (MNG)
+
+* '''Graphical Significance and Origin''': 
+
+* '''Common Meaning'''
+*# [[pattern]], [[model]], [[type]]
+*# [[law]]
+*# [[mold]]
+
+
 ----
-==Cantonese==
-===Hanzi===
-{{yue-hanzi|jyut=|y=[[ying4]]}}
-# {{defn|Cantonese}}
+
+== Chinese [[hanzi]] ==
+
+* '''Romanizations'''
+** '''[[Mandarin]]'''
+*** '''[[Pinyin]]''': [[xíng]] ([[xing2]])
+*** '''[[Wade-Giles]]''': [[hsing2|hsing<sup>2</sup>]]
+*** '''[[Yale]]''': 
+** '''[[Cantonese]]'''
+*** '''[[Jyutping]]''':
+*** '''[[Penkyamp]]''': 
+*** '''[[Yale]]''': [[ying4]]
+
+
 ----
-==Japanese==
-===Kanji===
+
+== Japanese [[kanji]] ==
+
 * '''Readings'''
 ** '''[[on]]''': [[けい]] (kei)
 ** '''[[kun]]''': [[かた]] (kata)
+
+
 ----
-==Korean==
-===Hanja===
-{{ko-hanja|hangeul=형|rv=hyeong|mr=hyŏng}}
-# {{defn|Korean}}
+
+== Korean [[hanja]] ==
+
+* '''Pronunciation''': 형
+
+* '''Romanization'''
+** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': hyeong
+** '''[[McCune-Reischauer]]''': hyŏng
+
 ----
-==Mandarin==
-===Hanzi===
-{{cmn-hanzi|pin=[[xíng]] ([[xing2]])|wg=[[hsing2|hsing<sup>2</sup>]]}}
-# {{defn|Mandarin}}
+
+== Dictionary Information ==
+
+* KangXi: 0227.280
+* Morohashi: 05030
+* Dae Jaweon: 0463.180
+* Hanyu Da Zidian: 10436.110
+
+== Technical Information ==
+
+* '''Unicode''':
+** Hex: 578B
+** Decimal: 22411
+* '''Big5''':
+** Hex: ABAC
+** Decimal: 43948
+
+[[Category:Japanese kanji]]
 
 [[fr:型]]
 [[pl:型]]
