/* Japanese */ ja-pos argument <星#1778540>

--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -100,7 +100,7 @@
 # a [[stellar]] object; [[star]]; [[planet]]; satellite; [[comet]]
 
 ===Proper noun===
-{{ja-pos|k|hira=ほし|rom=Hoshi}}
+{{ja-pos|k|proper|hira=ほし|rom=Hoshi}}
 # Hoshi (a surname)
 
 ----
