--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -61,6 +61,9 @@
 #To make an electronic device nonfunctional, rendering it as useful as a brick.
 #:''My VCR was '''bricked''' during the lightning storm''.
 
+===Intransitive verb===
+# ({{slang}}) To [[ejaculate]].
+
 ===Derived terms===
 * [[bricks and mortar]]
 * [[bricker]]
