/* Pronunciation */ +IPA, +SAMPA <beautiful#1800468>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -6,6 +6,7 @@
 From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''full of'''
 
 ===Pronunciation===
+*{{IPA|/ˈbjuːtɪfl/}}, {{SAMPA|/"bju:tIfl/}}
 *{{audio|en-us-beautiful.ogg|Audio (US)}}
 
 ===Adjective===
