--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -13,6 +13,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 {{en-adj}}
 
 #possessing great charm and very attractive; appealing, desirable; handsome; elegant; lovely; fair; charming; graceful; pretty; delightful; fine.
+''Example:'' Lyds is '''beautiful'''
 #{{cattag|of the weather}} pleasant; clear.
 
 ====Translations====
