--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Noun===
-'''[[united|United]] [[states|States]] [[of]] [[America]]'''
+'''The [[united|United]] [[states|States]] [[of]] [[America]]'''
 
 # The country in [[North America]], sharing land borders with [[Canada]] and [[Mexico]], stretching from the [[Atlantic Ocean|Atlantic]] to the [[Pacific Ocean]], and including [[Alaska]] and [[Hawaii]].
 
