adding info, standardizing <傘#1809032>

--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -1,5 +1,4 @@
 {{see|伞}}
-
 ==Translingual==
 ===Han character===
 {{Han char|rad=人|as=10|sn=12|four=8040<sub>8</sub>|canj=人人人十 (OOOJ)}}
@@ -9,16 +8,14 @@
 ----
 ==Cantonese==
 ===Hanzi===
-{{yue-hanzi|jyut=|y=[[saan3]]}}
+{{yue-hanzi|jyut=[[saan3]]|y=[[saan3]]}}
 # {{defn|Cantonese}}
 
 ----
 ==Japanese==
 [[Category:1000_Japanese_basic_words|かさ]]
-
-
 ===Noun===
-{{janoun|かさ|kasa}}
+{{ja-noun|k|hira=かさ|rom=kasa|count=本}}
 # [[umbrella]], [[parasol]]
 #*傘を[[差す]] 
 #*:かさをさす
@@ -41,7 +38,7 @@
 *[[傘立て]]
 
 ===Kanji===
-{{ja-kanji|grade=|rs=人10}}
+{{ja-kanji|grade=7|rs=人10}}
 ====Readings====
 {{ja-readings|on=[[さん]] ([[san]])|kun=[[かさ]] ([[kasa]])}}
 ====Compounds====
@@ -58,8 +55,6 @@
 ----
 ==Korean==
 ===Hanja===
-
-
 * '''Pronunciation''': [[산]]
 
 * '''Romanization'''
@@ -68,12 +63,13 @@
 
 ====Compounds====
 * [[雨傘]] ([[우산]], usan)
+
 ----
 ==Mandarin==
 ===Hanzi===
 {{cmn-hanzi|sim=伞|pin=[[sǎn]] ([[san3]])|wg=[[san3|san<sup>3</sup>]]}}
 # {{defn|Mandarin}}
-----
+
 [[de:傘]]
 [[fr:傘]]
 [[ko:傘]]
