robot  Adding: [[et:find]], [[pl:find]] <find#1823518>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -123,6 +123,7 @@ Old English ''[[findan]]'', from Germanic ''*finþanan''.  Cognate with Dutch ''
 
 [[Category:200 English basic words]]
 
+[[et:find]]
 [[es:find]]
 [[fr:find]]
 [[gl:find]]
@@ -132,6 +133,7 @@ Old English ''[[findan]]'', from Germanic ''*finþanan''.  Cognate with Dutch ''
 [[kk:find]]
 [[ku:find]]
 [[hu:find]]
+[[pl:find]]
 [[pt:find]]
 [[ru:find]]
 [[fi:find]]
