/* Derived terms */ +[[water under the bridge]]; alphabetize <bridge#1823607>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -139,8 +139,9 @@
 {{bottom}}
 
 ====Derived terms====
-* [[Maryland bridge]]
 * [[bridge mount]]
+* [[Maryland bridge]]
+* [[water under the bridge]]
 
 ===Noun===
 '''bridge'''
