--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -24,6 +24,7 @@ Old English ''[[sūcan]]''
 ====Translations====
 '''To use the mouth to pull in liquid substances for ingestion or to perform a similar act on solid material without ingestion'''
 {{top}}
+*Arabic: [[مص]]
 *Bulgarian: [[смуча]]
 *Finnish: [[imeä]]
 *French:  [[sucer]]
