--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -69,6 +69,7 @@ Old English ''[[sprēcan]]'' (later: ''spēcan'')
 *Slovene: [[govoriti]] (1, 2, 3, 4, 6)
 *Spanish: [[hablar]]
 *Swedish: [[tala]]
+*Swahili: [[ongea]]
 *Tagalog: [[magsalita]]
 *Thai: {{THchar|[[พูด]]}} (pôot)
 *[[Tupinambá]]: [[nhe'eng]]
