--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -22,6 +22,7 @@
 {{rfc-trans}}
 {{top}}
 *Bosnian: [[grana#Bosnian|grana]] {{f}} (1, 2)
+*Bulgarian: [[клон]] (klon) {{m}}, [[клонка]] (klonka) {{f}}; [[отрасъл]] (otrasăl) {{m}} (of business)
 *Croatian: [[grana#Croatian|grana]] {{f}} (1, 2)
 *Dutch: [[tak]] (1, 2), [[filiaal]] (3)
 *Finnish: [[oksa]] (1), [[haara]] (2), [[ala]] (3)
