/* Translations */ Vietnamese <plum#1853021>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -283,6 +283,13 @@
 {{mid}}
 *Japanese: [[暗紫色]]の (あんししょくの, anshishoku no)
 *Romanian: [[prună]] {{f}}
+*Vietnamese: [[màu]] [[mận]]
+{{bottom}}
+
+'''choice'''
+{{top}}
+{{mid}}
+*Vietnamese: [[chọn lọc]]
 {{bottom}}
 
 ===Adverb===
