+etymology & {{wikipedia}} <float#1853292>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -1,7 +1,11 @@
+{{wikipedia}}
 ==English==
 
 ===Pronunciation===
 *:Rhymes: [[Rhymes:English:-əʊt|-əʊt]]
+
+===Etymology===
+From {{OE.}} [[flotian]].
 
 ===Intransitive verb===
 {{en-verb}}
