robot  Adding: [[simple:substance]] <substance#1855708>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -127,6 +127,7 @@ From Latin ''[[substantia]]'', '''substance''' or '''essence''', noun form from 
 [[hu:substance]]
 [[pt:substance]]
 [[ru:substance]]
+[[simple:substance]]
 [[fi:substance]]
 [[ta:substance]]
 [[vi:substance]]
