/* Translations - Korean */ <pull#1857558>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -38,6 +38,7 @@ Old English ''[[pullian]]''
 *German: [[ziehen]] [[:de:ziehen|(de)]]
 *Italian: [[tirare]] [[:it:tirare|(it)]]
 {{mid}}
+*Korean: [[끌다]] (kkeulda)
 *Polish: [[ciągnąć]], [[pociągnąć]]
 *Swahili: [[kuvuta]]
 *Swedish: [[dra]]
