--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -90,6 +90,7 @@
 '''bony ridge of the nose'''
 {{top}}
 *Danish: [[næseben]] {{n}}
+*Finnish: [[nenän selkä]]
 *Italian: [[setto]] nasale {{m}}
 {{mid}}
 *Polish: [[grzbiet]] {{m}}
@@ -100,6 +101,7 @@
 *Bosnian: [[proteza#Bosnian|proteza]] {{f}}
 *Catalan: [[pont]] {{m}}
 *Danish: [[bro]] {{c}}
+*Finnish: [[(hammas)silta]]
 *French: bridge {{m}}
 *Hungarian: [[hid#Hungarian|híd]]
 *Italian: [[ponte]] {{m}}
@@ -116,6 +118,7 @@
 '''nautical'''
 {{top}}
 *Bosnian: [[kapetanski mostić#Bosnian|kapetanski mostić]] {{m}}
+*Finnish: [[komentosilta]]
 *Hungarian: [[hid#Hungarian|híd]]
 *Polish: [[mostek kapitański]] {{m}}
 *Russian: [[капитанский мостик]] (kapitánskij móstik) {{m}}
