es trans <secretary#1870488>

--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -50,6 +50,7 @@ Medieval Latin ''[[secretarius]]'', one entrusted with [[secret]]s.
 {{mid}}
 *[[Kurdish]]: [[sekreter]]
 *Portuguese: [[secretário]] {{m}}, [[secretária]] {{f}}
+*Spanish: [[secretario]] {{m}}
 *[[Telugu]]: [[కార్యదర్శి]] (kaaryadarSi)
 *Tok Pisin: [[sekreteri]]
 {{bottom}}
