--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -69,7 +69,7 @@
 {{en-verb}}
 
 # {{intransitive}}: To [[enumerate]] the digits of one's [[numeral]] system.
-#: Can you '''count''' to a hundred
+#: Can you '''count''' to a hundred?
 # {{transitive}}: To determine the [[number]] (of objects in a group.)
 #: There are three apples; '''count''' them.
 #{{intransitive}} to [[matter]]
