[[User:Connel MacKenzie/Format|fmt]] <het#1884408>

--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -1,8 +1,6 @@
 {{see|hét|нет}}
 ==Dutch==
-[[Category:Dutch articles]]
-[[Category:Dutch personal pronouns]]
-[[Category:Dutch indefinite pronouns]]
+
 ===Definite article===
 '''het'''
 
@@ -42,7 +40,7 @@
 #: ''Het zij zo.'' &mdash; So be it.
 #: ''Ik doe het wat rustig aan.'' &mdash; I'm taking it easy.
 
-===See also=== 
+===See also===
 * [[de]]
 * [[een]]
 * [[нет]]<!-- cyrillic homograph -->
@@ -50,18 +48,18 @@
 ----
 
 ==Swedish==
+
 ===Adjective===
 {{sv-adj-reg}}
 '''het'''
 
-#[[hot]]
-## having a very high [[temperature]]
-## [[feverish]]
-## (of food) [[spicy]]
-## radioactive
-## (slang) physically very attractive
-##: ''Den kvinnan är het!'' = ''That woman is hot!''
-## popular, in demand.
+# [[hot]]; having a very high [[temperature]]
+# [[hot]]; [[feverish]]
+# [[hot]]; (of food) [[spicy]]
+# [[hot]]; radioactive
+# [[hot]]; (slang) physically very attractive
+#: ''Den kvinnan är '''het'''!'' = ''That woman is '''hot'''!''
+# [[hot]]; popular, in demand.
 
 ====Synonyms====
 ;of high temperature
@@ -81,15 +79,22 @@
 ;popular
 *[[ute]]
 
-[[category:Swedish adjectives]]
 ----
+
 ==Tok Pisin==
+
 ===Etymology===
 From English ''[[head]]''.
+
 ===Noun===
 '''het'''
 
 # [[head]]
+
+[[Category:Dutch articles]]
+[[Category:Dutch personal pronouns]]
+[[Category:Dutch indefinite pronouns]]
+[[Category:Swedish adjectives]]
 [[Category:Tok Pisin nouns]]
 [[Category:tpi:Anatomy]]
 
