--- a/en/c/chosen.6834.wikitext
+++ b/en/c/chosen.6834.wikitext
@@ -12,6 +12,7 @@
 ====Translations====
 *Danish: [[valgt]]
 *Dutch: [[gekozen]]
+*Finnish: [[valittu]]
 *Indonesian: [[pilih]], [[pilah]], [[pilih|memilih]], [[pilih|dipilih]], [[pilih|terpilih]]
 *Japanese: [[選んだ]] ([[えらんだ]], eranda),  [[選ばれた]] ([[えらばれた]], erabareta)
 *Swedish: [[valt]]
