updating Etymologies with proper templates <thunder#1886851>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{etymon|ang|þunor}}
+{{etymon|OE.|þunor}}
 
 ===Pronunciation===
 *{{AHD|/thŭn'dər/}}
@@ -22,7 +22,7 @@
 
 ====Translations====
 {{rfc-trans}}
-{{top}}
+{{trans-top}}
 *Arabic: {{ARchar|[[رعد]]}} {{Unicode|(raʕd)}}
 *[[Breton]]: [[kurun]] {{f}}, [[taran]] {{m}}
 *Chinese: [[雷]] (léi)
@@ -37,7 +37,7 @@
 *Indonesian: [[gelegar]], [[suara]] [[petir]], [[suara halilintar]]
 *[[Interlingua]]: [[tonitro]]
 *Italian: [[tuono]] {{m}}
-{{mid}}
+{{trans-mid}}
 *Japanese: [[雷]] ([[かみなり]]、kaminari), [[雷鳴]] ([[らいめい]], raimei)
 *Kinyarwanda: [[inkuba]]
 *[[Kurdish]]: [[birûsk]] {{f}}
@@ -53,16 +53,17 @@
 *Thai: [[สายฟ้า]] (Sāi-Fā)
 *[[Tupinambá]]: [[tupã sununga]]
 *Welsh: [[taranau]], [[taran]] = 'peal of thunder', [[tyrfau]]
-{{bottom}}
+{{trans-bottom}}
 
 ===Verb===
 {{en-verb}}
 
-#to make a noise like thunder.
-#to talk with a loud, threatening voice.
+#To make a noise like thunder.
+#To talk with a [[loud]], [[threatening]] voice.
 
 ====Translations====
 {{rfc-trans}}
+{{trans-top}}
 *[[Breton]]: [[ober]] [[kurun]] (1), [[taranal]] / [[taraniñ]] (1,2)
 *Czech: [[hřmít]] (1,2), [[hromovat]] (2)
 *Dutch: [[donderen]] (1), [[overdonderen]] (2)
@@ -73,6 +74,7 @@
 *[[Guaraní]]: [[sunu]]
 *Indonesian: [[gelegar]]
 *[[Interlingua]]: [[tonar]]
+{{trans-mid}}
 *Italian: [[tuonare]]
 *Japanese: 雷が[[鳴る]] (かみなりが[[なる]], kaminariga naru); [[怒鳴る]] ([[どなる]], donaru)
 *Latin: [[tonare]]
@@ -83,6 +85,7 @@
 *Swedish: [[dundra]] (1), [[dåna]] (1)
 *[[Tupinambá]]: [[sunung]]
 *Thai: สายฟ้า[[ฟาด]](Sai-Fa-Fad) , [[ฟ้าผ่า]](Fa-Pa)
+{{trans-bottom}}
 
 ===Derived terms===
 *[[thunderbolt]]
@@ -92,7 +95,6 @@
 
 [[Category:1000 English basic words]]
 [[Category:Weather]]
-[[Category:English verbs that lack inflection template]]
 
 [[ang:thunder]]
 [[fa:thunder]]
