--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -50,6 +50,7 @@
 *German: [[Europäer]] ''m'', [[Europäerin]] ''f''
 *[[Interlingua]]: [[europeo]]
 *Italian: [[europeo]] ''m'', [[europea]] ''f''
+*Japanese: [[ヨーロッパ人]] (Yōroppajin), [[欧州人]] (Ōshūjin)
 *Polish: [[Europejczyk]] ''m'', [[Europejka]] ''f''
 *Portuguese: [[europeu]] ''m'', [[europeia]] ''f''
 *Romanian: [[european]] {{m}}, [[europeană]] {{f}}
