/* Translations */ <Czech Republic#1889179>

--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -42,6 +42,7 @@
 *Turkish: [[Çek Cumhuriyeti]]
 *Ukrainian: [[Чеська Республіка]]
 *Yiddish: (Tshekhishe Republik)
+*Welsh: [[Y Weriniaeth Tsiec]]
 {{bottom}}
 
 ====See also====
