--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -69,6 +69,7 @@ Medieval Latin ''[[secretarius]]'', one entrusted with [[secret]]s.
 *French: [[messager serpentaire]]
 {{mid}}
 *German: [[Sekretär]]
+*Spanish: [[serpentario]] {{m}}
 {{bottom}}
 
 =====Translations to be categorized=====
