robot  Adding: [[ku:come]] <come#1894758>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -134,6 +134,7 @@ Latin [[comede]] (imperative), [[comedit]] (present).
 [[io:come]]
 [[it:come]]
 [[kk:come]]
+[[ku:come]]
 [[la:come]]
 [[hu:come]]
 [[ja:come]]
