/* Noun */ en-noun <bridge#1903449>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -5,7 +5,7 @@
 *{{audio|en-us-bridge.ogg|Audio (US)}}
 *Rhymes: [[Rhymes:English:-ɪdʒ|-ɪdʒ]]
 ===Noun===
-'''bridge''' (''plural'' '''[[bridges]]''')
+{{en-noun}}
 
 #A [[construction]] or [[natural]] [[feature]] that [[span]]s a [[divide]].
 #: ''The rope '''bridge''' crosses the river.''
@@ -22,7 +22,7 @@
 #(''music'') A song contained within another song, often demarcated by meter, key, or melody.
 #: ''The lyrics in the song's '''bridge''' inverted its meaning.''
 #{{chemistry}} a [[valence bond]], [[atom]] or [[chain]] of atoms that [[connect]]s two different parts of a [[molecule]]; the atoms so connected being [[bridgehead]]s
-#([[electronics]]) an unintended [[solder]] [[connection]] between two or more [[component]]s or pins
+#(''[[electronics]]'') an unintended [[solder]] [[connection]] between two or more [[component]]s or pins
 #''([[card game|card games]])'' a [[game]] of the [[whist]] type for four players split into two teams of two. The official name is contract bridge and its most common forms are rubber bridge, chicago bridge and duplicate bridge. 
 ====Etymology====
 #Old English ''[[brycġ]]''
